RESOLVED FIXED233412
[MSVC] RenderBlock.cpp(2259): warning C4239: nonstandard extension used: 'initializing': conversion from 'WebCore::Length' to 'WebCore::Length &'
https://bugs.webkit.org/show_bug.cgi?id=233412
Summary [MSVC] RenderBlock.cpp(2259): warning C4239: nonstandard extension used: 'ini...
Fujii Hironori
Reported 2021-11-21 21:35:50 PST
[MSVC] RenderBlock.cpp(2259): warning C4239: nonstandard extension used: 'initializing': conversion from 'WebCore::Length' to 'WebCore::Length &' WinCairo build reports the following warnings. Source\WebCore\rendering/RenderBlock.cpp(2259): warning C4239: nonstandard extension used: 'initializing': conversion from 'WebCore::Length' to 'WebCore::Length &' Source\WebCore\rendering/RenderBlock.cpp(2259): note: A non-const reference may only be bound to an lvalue Source\WebCore\rendering/RenderBox.cpp(3116): warning C4239: nonstandard extension used: 'initializing': conversion from 'WebCore::Length' to 'WebCore::Length &' Source\WebCore\rendering/RenderBox.cpp(3116): note: A non-const reference may only be bound to an lvalue
Attachments
Patch (3.48 KB, patch)
2021-11-21 21:39 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2021-11-21 21:39:38 PST
Fujii Hironori
Comment 2 2021-11-21 21:40:15 PST
Bug 230755 added the code.
EWS
Comment 3 2021-11-22 12:42:18 PST
Committed r286118 (244505@main): <https://commits.webkit.org/244505@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444943 [details].
Radar WebKit Bug Importer
Comment 4 2021-11-22 12:43:21 PST
Note You need to log in before you can comment on or make changes to this bug.