[MSVC] RenderBlock.cpp(2259): warning C4239: nonstandard extension used: 'initializing': conversion from 'WebCore::Length' to 'WebCore::Length &' https://bugs.webkit.org/show_bug.cgi?id=233412

Reviewed by Don Olmstead.

WinCairo build reported the following warnings.

> Source\WebCore\rendering/RenderBlock.cpp(2259): warning C4239: nonstandard extension used: 'initializing': conversion from 'WebCore::Length' to 'WebCore::Length &'
> Source\WebCore\rendering/RenderBlock.cpp(2259): note: A non-const reference may only be bound to an lvalue
> Source\WebCore\rendering/RenderBox.cpp(3116): warning C4239: nonstandard extension used: 'initializing': conversion from 'WebCore::Length' to 'WebCore::Length &'
> Source\WebCore\rendering/RenderBox.cpp(3116): note: A non-const reference may only be bound to an lvalue

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computePreferredLogicalWidths):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalHeight const):
Changed "auto&" to "const auto&".



Canonical link: https://commits.webkit.org/244505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286118 268f45cc-cd09-0410-ab3c-d52691b4dbfc